--- a/protected/modules/dashboard/assets/css/src/preview.css
+++ b/protected/modules/dashboard/assets/css/src/preview.css
@@ -369,6 +369,18 @@ main .comment-container .settings-row .comment-byline {
 	text-transform: uppercase;
 }
 
+main .comment-container .settings-row .user-avatar {
+	display: table-cell;
+	float: none;
+	min-width: 35px;
+	vertical-align: top;
+}
+
+main .comment-container .settings-row .main-comment {
+	display: table-cell;
+	float: none;
+}
+
 main .comment-container .settings-row .comment-byline {
 	border: none;
 	padding: 0px;
